--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <source src="video.mp4" type="video/mp4">
     </video>
     <p>this is david</p>
+    <p>i love him</p>
 </body>
 <center><p style="color: white">Designed by: Blessing Ehumadu</p></center>
 </html>
